// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip Realtime should update tooltip correctly 1`] = `
HTMLCollection [
  <div
    class="ag-chart-tooltip ag-chart-tooltip-no-interaction ag-chart-tooltip-hidden ag-chart-tooltip-arrow ag-chart-tooltip-wrap-hyphenate"
  />,
  <div
    class="ag-chart-tooltip ag-chart-tooltip-no-interaction ag-chart-tooltip-hidden ag-chart-tooltip-arrow ag-chart-tooltip-wrap-hyphenate"
  />,
  <div
    class="ag-chart-tooltip ag-chart-tooltip-no-interaction ag-chart-tooltip-arrow ag-chart-tooltip-wrap-hyphenate"
    style="transform: translate(377px, 39px);"
  >
    <div
      class="ag-chart-tooltip-content"
    >
      4: 1.5
    </div>
  </div>,
]
`;

exports[`Tooltip Realtime should update tooltip correctly 2`] = `
HTMLCollection [
  <div
    class="ag-chart-tooltip ag-chart-tooltip-no-interaction ag-chart-tooltip-hidden ag-chart-tooltip-arrow ag-chart-tooltip-wrap-hyphenate"
  />,
  <div
    class="ag-chart-tooltip ag-chart-tooltip-no-interaction ag-chart-tooltip-hidden ag-chart-tooltip-arrow ag-chart-tooltip-wrap-hyphenate"
  />,
  <div
    class="ag-chart-tooltip ag-chart-tooltip-no-interaction ag-chart-tooltip-arrow ag-chart-tooltip-wrap-hyphenate"
    style="transform: translate(377px, 144px);"
  >
    <div
      class="ag-chart-tooltip-content"
    >
      5: 1.4
    </div>
  </div>,
]
`;

exports[`Tooltip Realtime should update tooltip correctly 3`] = `
HTMLCollection [
  <div
    class="ag-chart-tooltip ag-chart-tooltip-no-interaction ag-chart-tooltip-hidden ag-chart-tooltip-arrow ag-chart-tooltip-wrap-hyphenate"
  />,
  <div
    class="ag-chart-tooltip ag-chart-tooltip-no-interaction ag-chart-tooltip-hidden ag-chart-tooltip-arrow ag-chart-tooltip-wrap-hyphenate"
  />,
  <div
    class="ag-chart-tooltip ag-chart-tooltip-no-interaction ag-chart-tooltip-arrow ag-chart-tooltip-wrap-hyphenate"
    style="transform: translate(377px, 387px);"
  >
    <div
      class="ag-chart-tooltip-content"
    >
      6: 1.2
    </div>
  </div>,
]
`;

exports[`Tooltip Realtime should update tooltip correctly 4`] = `
HTMLCollection [
  <div
    class="ag-chart-tooltip ag-chart-tooltip-no-interaction ag-chart-tooltip-hidden ag-chart-tooltip-arrow ag-chart-tooltip-wrap-hyphenate"
  />,
  <div
    class="ag-chart-tooltip ag-chart-tooltip-no-interaction ag-chart-tooltip-hidden ag-chart-tooltip-arrow ag-chart-tooltip-wrap-hyphenate"
  />,
  <div
    class="ag-chart-tooltip ag-chart-tooltip-no-interaction ag-chart-tooltip-arrow ag-chart-tooltip-wrap-hyphenate"
    style="transform: translate(377px, 534px);"
  >
    <div
      class="ag-chart-tooltip-content"
    >
      7: 1.1
    </div>
  </div>,
]
`;

exports[`Tooltip Realtime should update tooltip correctly 5`] = `
HTMLCollection [
  <div
    class="ag-chart-tooltip ag-chart-tooltip-no-interaction ag-chart-tooltip-hidden ag-chart-tooltip-arrow ag-chart-tooltip-wrap-hyphenate"
  />,
  <div
    class="ag-chart-tooltip ag-chart-tooltip-no-interaction ag-chart-tooltip-hidden ag-chart-tooltip-arrow ag-chart-tooltip-wrap-hyphenate"
  />,
  <div
    class="ag-chart-tooltip ag-chart-tooltip-no-interaction ag-chart-tooltip-arrow ag-chart-tooltip-wrap-hyphenate"
    style="transform: translate(377px, 29px);"
  >
    <div
      class="ag-chart-tooltip-content"
    >
      8: 1.5
    </div>
  </div>,
]
`;

exports[`Tooltip Realtime should update tooltip correctly 6`] = `
HTMLCollection [
  <div
    class="ag-chart-tooltip ag-chart-tooltip-no-interaction ag-chart-tooltip-hidden ag-chart-tooltip-arrow ag-chart-tooltip-wrap-hyphenate"
  />,
  <div
    class="ag-chart-tooltip ag-chart-tooltip-no-interaction ag-chart-tooltip-hidden ag-chart-tooltip-arrow ag-chart-tooltip-wrap-hyphenate"
  />,
  <div
    class="ag-chart-tooltip ag-chart-tooltip-no-interaction ag-chart-tooltip-arrow ag-chart-tooltip-wrap-hyphenate"
    style="transform: translate(377px, 451px);"
  >
    <div
      class="ag-chart-tooltip-content"
    >
      9: 1.2
    </div>
  </div>,
]
`;
